Update framework